--- a/src/components/feedbackOptions/feedbackOptions.module.css
+++ b/src/components/feedbackOptions/feedbackOptions.module.css
@@ -1,12 +1,16 @@
 .btn {
   /* border: none; */
-  width: 60px;
+  width: 70px;
   height: 30px;
   outline: none;
   cursor: pointer;
   margin-left: 25px;
+  border-radius: 4px;
+  border-style: none;
+  background-color: rgb(88, 215, 215);
+  transition: transform 150ms linear;
 }
 
 .btn:hover {
-  background-color: aqua;
+  transform: scale(1.1);
 }
