--- a/src/components/feedbackOptions/feedbackOptions.module.css
+++ b/src/components/feedbackOptions/feedbackOptions.module.css
@@ -7,10 +7,11 @@
   margin-left: 25px;
   border-radius: 4px;
   border-style: none;
-  background-color: rgb(88, 215, 215);
-  transition: transform 150ms linear;
+  background-color: rgb(151, 151, 238);
+  color: #fff;
 }
 
-.btn:hover {
-  transform: scale(1.1);
+.btn:hover,
+.btn:focus {
+  background-color: blue;
 }
